Azure SQL DB connection, migration and completed model

--- a/MediMove/MediMove/Shared/MediMove.Shared.csproj
+++ b/MediMove/MediMove/Shared/MediMove.Shared.csproj
@@ -17,4 +17,8 @@
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DTOs\" />
+  </ItemGroup>
 </Project>
