Replaced services with commands and queries

--- a/MediMove/MediMove/Server/MediMove.Server.csproj
+++ b/MediMove/MediMove/Server/MediMove.Server.csproj
@@ -36,8 +36,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Application\Billings\Commands\" />
     <Folder Include="Middleware\" />
-    <Folder Include="Migrations\" />
+    <Folder Include="Application\Infrastructure\Persistence\Migrations\" />
   </ItemGroup>
 
 
