Initial idea of auth models and DTO's and model unification

--- a/MediMove/MediMove/Server/MediMove.Server.csproj
+++ b/MediMove/MediMove/Server/MediMove.Server.csproj
@@ -36,6 +36,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Application\Authentication\Handlers\" />
+    <Folder Include="Application\Authentication\Commands\" />
+    <Folder Include="Application\Authentication\Queries\" />
     <Folder Include="Application\Billings\Commands\" />
     <Folder Include="Middleware\" />
     <Folder Include="Application\Infrastructure\Persistence\Migrations\" />
