--- a/MediMove/MediMove/Client/MediMove.Client.csproj
+++ b/MediMove/MediMove/Client/MediMove.Client.csproj
@@ -17,6 +17,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Radzen.Blazor" Version="4.13.0" />
   </ItemGroup>
 
   <ItemGroup>
